@@ -12,24 +12,28 @@ import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
 
+// #TODO Profile z Springa?
+// Dokładniejsza obsługa wyjątków?
+// W metodach testPageDeserialization i testWords jest powtarzający się kod do deserializacji
+// Zbędne zmienne - condition
+
 public class CDMSerializationTest {
+    // #TODO lepsze nazyw dla plików? Czyatj poniżej przykład
+    //       private static final String TEST_PAGE_PATH = "src/test/resources/CDMFiles/sample_page_data.json";
+    //       private static final String TEST_WORD_PATH_1 = "src/test/resources/CDMFiles/sample_word_data_1.json";
+    //       private static final String TEST_WORD_PATH_2 = "src/test/resources/CDMFiles/sample_word_data_2.json";
     String testPagePath = "src/test/resources/CDMFiles/page_test.json";
     String testWordPath1 = "src/test/resources/CDMFiles/word_test1.json";
     String testWordPath2 = "src/test/resources/CDMFiles/word_test2.json";
 
+
+    private final ObjectMapper objectMapper = new ObjectMapper();
+
     @Test
     void testPageDeserialization() throws IOException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        Boolean condition = true;
-        Page page = new Page();
-        try{
-            page = objectMapper.readValue(new File(testPagePath), Page.class);
-        }
-        catch(Exception e){
-            condition = false;
-        }
-        Assertions.assertTrue(condition);
-        Page manualPage = loadTestPage(testPagePath);
+        Page page = objectMapper.readValue(new File(TEST_PAGE_PATH), Page.class);
+        Page manualPage = loadTestPage(TEST_PAGE_PATH);
+
         Assertions.assertEquals(page.getWidth(), manualPage.getWidth());
         Assertions.assertEquals(page.getHeight(), manualPage.getHeight());
         Assertions.assertEquals(page.getRotation(), manualPage.getRotation());
@@ -37,45 +41,34 @@ public class CDMSerializationTest {
         Assertions.assertEquals(page.getPageNumber(), manualPage.getPageNumber());
     }
 
-
     @Test
     void testWords() throws IOException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        Boolean condition = true;
-        Word word1 = new Word();
-        Word word2 = new Word();
-        try{
-            word1 = objectMapper.readValue(new File(testWordPath1), Word.class);
-            word2 = objectMapper.readValue(new File(testWordPath2), Word.class);
-        }
-        catch(Exception e){
-            condition = false;
-        }
-        Assertions.assertTrue(condition);
+        Word word1 = objectMapper.readValue(new File(TEST_WORD_PATH_1), Word.class);
+        Word word2 = objectMapper.readValue(new File(TEST_WORD_PATH_2), Word.class);
 
-        String json1 = new String(Files.readAllBytes(new File(testWordPath1).toPath()), "UTF-8");
-        String json2 = new String(Files.readAllBytes(new File(testWordPath2).toPath()), "UTF-8");
-        Word manualWord1 = getSingleWord(objectMapper.readTree(json1));
-        Word manualWord2 = getSingleWord(objectMapper.readTree(json2));
+        // Użycie try-with-resources: Użyto Files.readString(Path.of(...))
+        // do odczytu plików, co automatycznie zarządza zasobami.
+        Word manualWord1 = getSingleWord(Files.readString(Path.of(TEST_WORD_PATH_1)));
+        Word manualWord2 = getSingleWord(Files.readString(Path.of(TEST_WORD_PATH_2)));
 
-        Assertions.assertEquals(word1.getRotation(), manualWord1.getRotation());
-        Assertions.assertEquals(word1.getWord(), manualWord1.getWord());
-        Assertions.assertEquals(word1.getConfidence(), manualWord1.getConfidence());
-        Assertions.assertEquals(word1.getxMean(), manualWord1.getxMean());
-        Assertions.assertEquals(word1.getyMean(), manualWord1.getyMean());
-
-        Assertions.assertEquals(word2.getRotation(), manualWord2.getRotation());
-        Assertions.assertEquals(word2.getWord(), manualWord2.getWord());
-        Assertions.assertEquals(word2.getConfidence(), manualWord2.getConfidence());
-        Assertions.assertEquals(word2.getxMean(), manualWord2.getxMean());
-        Assertions.assertEquals(word2.getyMean(), manualWord2.getyMean());
+        assertWordsEqual(word1, manualWord1);
+        assertWordsEqual(word2, manualWord2);
     }
 
-    Page loadTestPage(String path) throws IOException {
-        File testObj = new File(path);
-        ObjectMapper objectMapper = new ObjectMapper();
-        String json = new String(Files.readAllBytes(testObj.toPath()), "UTF-8");
-        JsonNode jsonNode = objectMapper.readTree(json);
+    // Metoda pomocnicza assertWordsEqual: Stworzono metodę pomocniczą do
+    // porównywania obiektów Word, aby zredukować powtarzający się kod.
+    // Można posunąć się do wyniesienia tej metody do utilTest package
+    // jeśli metoda była by używana w innych testach -> to discus with the team ?
+    private void assertWordsEqual(Word expected, Word actual) {
+        Assertions.assertEquals(expected.getRotation(), actual.getRotation());
+        Assertions.assertEquals(expected.getWord(), actual.getWord());
+        Assertions.assertEquals(expected.getConfidence(), actual.getConfidence());
+        Assertions.assertEquals(expected.getxMean(), actual.getxMean());
+        Assertions.assertEquals(expected.getyMean(), actual.getyMean());
+    }
+
+    private Page loadTestPage(String path) throws IOException {
+        JsonNode jsonNode = objectMapper.readTree(new File(path));
         Page page = new Page();
         page.setHeight(jsonNode.get("height").asInt());
         page.setWidth(jsonNode.get("width").asInt());
@@ -84,47 +77,44 @@ public class CDMSerializationTest {
         page.setRotation(jsonNode.get("rotation").asInt());
         page.setLines(getLines(jsonNode.get("lines")));
         page.setLanguage(getLanguage(jsonNode.get("language")));
-
         return page;
     }
 
-    List<Language> getLanguage(JsonNode pageNode){
+    private List<Language> getLanguage(JsonNode pageNode) {
         List<Language> languages = new ArrayList<>();
-        for(JsonNode obj: pageNode){
+        for (JsonNode obj : pageNode) {
             Language lang = new Language();
             lang.setLanguageCode(obj.get("languageCode").asText());
             lang.setConfidence((float) obj.get("confidence").asDouble());
             languages.add(lang);
         }
-
         return languages;
     }
 
-    List<Line> getLines(JsonNode pageNode){
+    private List<Line> getLines(JsonNode pageNode) {
         List<Line> lines = new ArrayList<>();
-        for(JsonNode obj: pageNode){
+        for (JsonNode obj : pageNode) {
             Line line = new Line();
             line.setLineNumber(obj.get("lineNumber").asInt());
             line.setWords(getWordsFromJson(obj.get("words")));
             lines.add(line);
         }
-
         return lines;
     }
 
-    List<Word> getWordsFromJson(JsonNode lineWords){
+    private List<Word> getWordsFromJson(JsonNode lineWords) {
         List<Word> words = new ArrayList<>();
-        if(lineWords.isArray()){
-            for(JsonNode obj: lineWords){
-                Word word = getSingleWord(obj);
+        if (lineWords.isArray()) {
+            for (JsonNode obj : lineWords) {
+                words.add(getSingleWord(obj));
             }
-        }else{
+        } else {
             words.add(getSingleWord(lineWords));
         }
         return words;
     }
 
-    Word getSingleWord(JsonNode word){
+    private Word getSingleWord(JsonNode word) {
         Word newWord = new Word();
         newWord.setWord(word.get("word").asText());
         newWord.setConfidence(word.get("confidence").asInt());
@@ -136,15 +126,14 @@ public class CDMSerializationTest {
         newWord.setLowLeftCorner(getVertice(word.get("lowLeftCorner")));
         newWord.setTopRightCorner(getVertice(word.get("topRightCorner")));
         newWord.setLowRightCorner(getVertice(word.get("lowRightCorner")));
-
         return newWord;
     }
 
-    BoundingBox getBoundingBox(JsonNode bbox){
+    private BoundingBox getBoundingBox(JsonNode bbox) {
         return new BoundingBox(bbox.get("x1").asInt(), bbox.get("x2").asInt(), bbox.get("y1").asInt(), bbox.get("y2").asInt());
     }
 
-    Vertices getVertice(JsonNode vertice){
-        return new Vertices(vertice.get("x"). asInt(), vertice.get("y"). asInt());
+    private Vertices getVertice(JsonNode vertice) {
+        return new Vertices(vertice.get("x").asInt(), vertice.get("y").asInt());
     }
 }
